store section done

--- a/index.html
+++ b/index.html
@@ -412,6 +412,66 @@
     </section>
     <!-- section service ends -->
 
+    <!-- section specialities starts -->
+    <section id="specialities" style="background-image: url(./assets/images/specialitites/maindish.jpg);">
+      <div class="section-header-special" style="background-image: url(./assets/images/section-footer/brush-dec_2.png);"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="title text-center">
+              <p >Special menu offers.</p>
+            <h1 class="text-white">Enjoy Restaurants Specialties</h1>
+            </div>
+            <div class="dots">
+              <ul class="list-unstyled justify-content-center align-items-center">
+                <li>.</li>
+                <li>.</li>
+                <li>.</li>
+                <li>.</li>
+                <li>.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3">
+            <div class="menu-tabs">
+              <ul class="list-unstyled tabs">
+                <li class="d-flex justify-content-between align-items-baseline"><div class="name">
+                  <span class="menu-order">01.</span><a href="#">Main dishes</a>
+                </div><i class="fas fa-caret-left"></i></li>
+                <li class="d-flex justify-content-between align-items-baseline"><div class="name">
+                  <span class="menu-order">02.</span><a href="#">Starter</a>
+                </div><i class="fas fa-caret-left"></i></li>
+                <li class="d-flex justify-content-between align-items-baseline"><div class="name">
+                  <span class="menu-order">03.</span><a href="#">Desserts</a>
+                </div><i class="fas fa-caret-left"></i></li>
+                <li class="d-flex justify-content-between align-items-baseline"><div class="name">
+                  <span class="menu-order">04.</span><a href="#">Sea Food</a>
+                </div><i class="fas fa-caret-left"></i></li>
+                <li class="d-flex justify-content-between align-items-baseline"><div class="name">
+                  <span class="menu-order">05.</span><a href="#">Drinks</a>
+                </div><i class="fas fa-caret-left"></i></li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 d-flex justify-content-between align-items-end">
+            <div class="menu-link">
+              <a href="#" class="menubtn btn">View Full Menu<i class="icon fal fa-long-arrow-right"></i></a>
+            </div>
+            <div class="pdf">
+              <a href="#" class="pdfbtn">Download PDF</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section-footer-special" style="background-image: url(./assets/images/section-footer/brush-dec.png);"></div>
+    </section>
+    <!-- section specialities ends -->
+
     <!-- section chefs starts -->
     <section id="chefs">
       <div class="container">
@@ -542,13 +602,13 @@
        <div class="row">
         <div class="col-lg-6 p-0">
           <div class="events" style="background-image: url(./assets/images/store/bgstore2.png);">
-            <div class="title">
+            <div class="title text-center">
               <p>Book a table</p>
-              <h1>Upcoming Events</h1>
+              <h1 class="text-white">Upcoming Events</h1>
               
             </div>
             <div class="dots">
-              <ul class="list-unstyled">
+              <ul class="list-unstyled justify-content-center">
                 <li>.</li>
                 <li>.</li>
                 <li>.</li>
@@ -556,7 +616,58 @@
                 <li>.</li>
               </ul>
             </div>
+            <div class="slider">
+              <div class="event d-flex">
+                <div class="inner-event d-flex flex-column justify-content-center align-items-center">
+                  <h6 class="text-white">Jazz Band Live Event</h6>
+                <span>25 may 2020</span>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam aperiam. </p>
+                <div class="dots">
+                  <ul class="list-unstyled">
+                    <li>.</li>
+                    <li>.</li>
+                    <li>.</li>
+                  </ul>
+                </div>
+                </div>
+              </div>
+              <div class="event d-flex">
+                <div class="inner-event d-flex flex-column justify-content-center align-items-center">
+                  <h6 class="text-white">Wine and Steak Day</h6>
+                <span>19 June 2020</span>
+                <p>In ut odio libero, at vulputate urna. Nulla tristique mi a massa convallis cursus. Nulla eu mi magna. Etiam suscipit   gravida. </p>
+                <div class="dots">
+                  <ul class="list-unstyled">
+                    <li>.</li>
+                    <li>.</li>
+                    <li>.</li>
+                  </ul>
+                </div>
+                </div>
+              </div>
+              <div class="event d-flex">
+                <div class="inner-event d-flex flex-column justify-content-center align-items-center">
+                  <h6 class="text-white">Freedom Day Celebration</h6>
+                <span>14 October 2020</span>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam aperiam. </p>
+                <div class="dots">
+                  <ul class="list-unstyled">
+                    <li>.</li>
+                    <li>.</li>
+                    <li>.</li>
+                  </ul>
+                </div>
+                </div>
+              </div>
+            </div>
+            <div class="align-self-center text-white white-separator2">
+              .
+            </div>
+            <div class="align-self-center link-to-book mt-4">
+              <a href="#" class="bookbtn btn">Book Table Now<i class="icon fal fa-long-arrow-right"></i></a>
+            </div>
           </div>
+
         </div>
         <div class="col-lg-6 p-0">
           <div class="buy" style="background-image: url(./assets/images/store/bgstore.jpg);">
