--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
 
 
-      <a class="navbar-brand" href="#"><img src="./assets/images/logo/logo.png" alt="" class="img-fluid"></a>
+      <a class="navbar-brand" href="index.html"><img src="./assets/images/logo/logo.png" alt="" class="img-fluid"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,16 +52,16 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item ">
-            <a class="nav-link" href="#">Home </a>
+            <a class="nav-link" href="index.html">Home </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">News</a>
