--- a/cart.html
+++ b/cart.html
@@ -374,7 +374,7 @@
                     </td>
                     <td><input type="number" style="border: 0;width: 35px;" value="1"></td>
                     <td class="bg-light">$22.00</td>
-                    <td><i class="fas fa-times"></i></td>
+                    <td><i class="fas fa-times remove-btn"></i></td>
                   </tr>
                   <tr>
                     <th scope="row" class="p-1 text-center bg-light"><img src="./assets/images/menu/2.jpg"
@@ -384,7 +384,7 @@
                     </td>
                     <td><input type="number" style="border: 0;width: 35px;" value="1"></td>
                     <td class="bg-light">$22.00</td>
-                    <td><i class="fas fa-times"></i></td>
+                    <td><i class="fas fa-times remove-btn"></i></td>
                   </tr>
                   <tr>
                     <th scope="row" class="p-1 text-center bg-light"><img src="./assets/images/menu/3.jpg"
@@ -394,7 +394,7 @@
                     </td>
                     <td><input type="number" style="border: 0;width: 35px;" value="1"></td>
                     <td class="bg-light">$22.00</td>
-                    <td><i class="fas fa-times"></i></td>
+                    <td><i class="fas fa-times remove-btn"></i></td>
                   </tr>
 
                 </tbody>
